--- a/navbar.css
+++ b/navbar.css
@@ -9,11 +9,7 @@
     padding: 2px;
 }
 #navbar a{
-    background-color:aqua;
+    background-color:#0072ff;
     color:black;
     text-decoration:none;
-}
-body{
-    background-color:aqua;
-    text-align:center;
 }
